# code-compass

./: .gitignore  AB_REPORT.md  LICENSE  README.md  _ts.py  chunker.py  config.py  embedder.py  indexer.py  pyproject.toml  reranker.py  retriever.py  server.py  test_chunker.py  test_embedder.py  test_indexer.py  test_retriever.py  test_server.py  test_watcher.py  watcher.py
.github/workflows/: ci.yml
eval/: coir_compare.py  eval_set.json  run_eval.py
