[project]
name = "code-compass"
version = "0.1.0"
description = "Self-hosted code-context search over MCP — hybrid retrieval + rerank for AI coding agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "skippdot" }]
keywords = ["mcp", "code-search", "rag", "code-retrieval", "embeddings", "tree-sitter"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "voyageai>=0.3.7",            # embeddings (voyage-code-3, code-tuned)
    "tree-sitter>=0.25",          # syntax-aware chunking
    "tree-sitter-language-pack>=1.8",  # prebuilt grammars
    "lancedb>=0.13",              # local vector store (single file, no server)
    "rank-bm25>=0.2.2",           # lexical half of hybrid search
    "mcp>=1.0",                   # MCP stdio server SDK
]

[dependency-groups]
dev = ["ruff>=0.15"]
# offline embeddings (heavy: pulls torch) — install with `uv pip install -e '.[local]'`
local = ["sentence-transformers>=3.0"]

[project.optional-dependencies]
local = ["sentence-transformers>=3.0"]
watch = ["watchdog>=4.0"]

[project.urls]
Repository = "https://github.com/skippdot/code-compass"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# E/F = pyflakes+pycodestyle, I = import sorting, UP = pyupgrade, B = bugbear
select = ["E", "F", "I", "UP", "B"]
